--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <p class="font-sans text-[18px] text-black font-semibold">Score</p>
                     <input class="score p-2 w-full text-black rounded-md border border-[#c5c4c4]" required type="number">
                 </div>            
+                <div>
+                    <p class="font-sans text-[18px] text-black font-semibold">Date</p>
+                    <input class="date p-2 w-full text-black rounded-md border border-[#c5c4c4]" required type="date">
+                </div>            
+
                 <button class="bg-blue-700 p-2 rounded-md font-semibold hover:bg-blue-900 transition-colors duration-200">Submit</button>
             </form>
         </aside>
